// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`mul (float) > if the generated AST, WAT and memory map match the snapshot 1`] = `
[
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "mul",
      },
    ],
    "instruction": "module",
    "isSemanticOnly": true,
    "lineNumberAfterMacroExpansion": 0,
    "lineNumberBeforeMacroExpansion": 0,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "input1",
      },
    ],
    "instruction": "float",
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 2,
    "lineNumberBeforeMacroExpansion": 2,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "input2",
      },
    ],
    "instruction": "float",
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 3,
    "lineNumberBeforeMacroExpansion": 3,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "output",
      },
    ],
    "instruction": "float",
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 4,
    "lineNumberBeforeMacroExpansion": 4,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "&output",
      },
    ],
    "instruction": "push",
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 6,
    "lineNumberBeforeMacroExpansion": 6,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "input1",
      },
    ],
    "instruction": "push",
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 7,
    "lineNumberBeforeMacroExpansion": 7,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "input2",
      },
    ],
    "instruction": "push",
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 8,
    "lineNumberBeforeMacroExpansion": 8,
  },
  {
    "arguments": [],
    "instruction": "mul",
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 9,
    "lineNumberBeforeMacroExpansion": 9,
  },
  {
    "arguments": [],
    "instruction": "store",
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 10,
    "lineNumberBeforeMacroExpansion": 10,
  },
  {
    "arguments": [],
    "instruction": "moduleEnd",
    "isSemanticOnly": true,
    "lineNumberAfterMacroExpansion": 12,
    "lineNumberBeforeMacroExpansion": 12,
  },
]
`;

exports[`mul (float) > if the generated AST, WAT and memory map match the snapshot 2`] = `
"(module
  (type (;0;) (func))
  (import "js" "memory" (memory (;0;) 1))
  (func (;0;) (type 0)
    i32.const 8
    i32.const 0
    f32.load
    i32.const 4
    f32.load
    f32.mul
    f32.store)
  (export "test" (func 0)))
"
`;

exports[`mul (float) > if the generated AST, WAT and memory map match the snapshot 3`] = `
{
  "input1": {
    "byteAddress": 0,
    "default": 0,
    "elementWordSize": 4,
    "id": "input1",
    "isInteger": false,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "float",
    "wordAlignedAddress": 0,
    "wordAlignedSize": 1,
  },
  "input2": {
    "byteAddress": 4,
    "default": 0,
    "elementWordSize": 4,
    "id": "input2",
    "isInteger": false,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "float",
    "wordAlignedAddress": 1,
    "wordAlignedSize": 1,
  },
  "output": {
    "byteAddress": 8,
    "default": 0,
    "elementWordSize": 4,
    "id": "output",
    "isInteger": false,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "float",
    "wordAlignedAddress": 2,
    "wordAlignedSize": 1,
  },
}
`;

exports[`mul (int) > if the generated AST, WAT and memory map match the snapshot 1`] = `
[
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "mul",
      },
    ],
    "instruction": "module",
    "isSemanticOnly": true,
    "lineNumberAfterMacroExpansion": 0,
    "lineNumberBeforeMacroExpansion": 0,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "input1",
      },
    ],
    "instruction": "int",
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 2,
    "lineNumberBeforeMacroExpansion": 2,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "input2",
      },
    ],
    "instruction": "int",
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 3,
    "lineNumberBeforeMacroExpansion": 3,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "output",
      },
    ],
    "instruction": "int",
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 4,
    "lineNumberBeforeMacroExpansion": 4,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "&output",
      },
    ],
    "instruction": "push",
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 6,
    "lineNumberBeforeMacroExpansion": 6,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "input1",
      },
    ],
    "instruction": "push",
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 7,
    "lineNumberBeforeMacroExpansion": 7,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "input2",
      },
    ],
    "instruction": "push",
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 8,
    "lineNumberBeforeMacroExpansion": 8,
  },
  {
    "arguments": [],
    "instruction": "mul",
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 9,
    "lineNumberBeforeMacroExpansion": 9,
  },
  {
    "arguments": [],
    "instruction": "store",
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 10,
    "lineNumberBeforeMacroExpansion": 10,
  },
  {
    "arguments": [],
    "instruction": "moduleEnd",
    "isSemanticOnly": true,
    "lineNumberAfterMacroExpansion": 12,
    "lineNumberBeforeMacroExpansion": 12,
  },
]
`;

exports[`mul (int) > if the generated AST, WAT and memory map match the snapshot 2`] = `
"(module
  (type (;0;) (func))
  (import "js" "memory" (memory (;0;) 1))
  (func (;0;) (type 0)
    i32.const 8
    i32.const 0
    i32.load
    i32.const 4
    i32.load
    i32.mul
    i32.store)
  (export "test" (func 0)))
"
`;

exports[`mul (int) > if the generated AST, WAT and memory map match the snapshot 3`] = `
{
  "input1": {
    "byteAddress": 0,
    "default": 0,
    "elementWordSize": 4,
    "id": "input1",
    "isInteger": true,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 0,
    "wordAlignedSize": 1,
  },
  "input2": {
    "byteAddress": 4,
    "default": 0,
    "elementWordSize": 4,
    "id": "input2",
    "isInteger": true,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 1,
    "wordAlignedSize": 1,
  },
  "output": {
    "byteAddress": 8,
    "default": 0,
    "elementWordSize": 4,
    "id": "output",
    "isInteger": true,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 2,
    "wordAlignedSize": 1,
  },
}
`;
